blue-green/svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc-deployment-strategies
spec:
  selector:
    app: deployment-strategies
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
